--- a/CarRental/Views/Product/Details.cshtml
+++ b/CarRental/Views/Product/Details.cshtml
@@ -190,7 +190,7 @@
                                                     }
 
                                                 </div>
-                                                <h5>@item.Name - <span> @item.CreatedDate.Value.ToString("dd/MM/yyyy")</span></h5>
+                                                <h5 style="color:black">@item.Name - <span> @item.CreatedDate.Value.ToString("dd/MM/yyyy")</span></h5>
                                             </div>
                                             <p>@item.Detail</p>
                                         </div>
