--- a/CarRental/Views/Product/Index.cshtml
+++ b/CarRental/Views/Product/Index.cshtml
@@ -231,7 +231,7 @@
                                   Swal.fire({
                                    position: "top-end",
                                    icon: "success",
-                                   title: "Your work has been saved",
+                                   title: "Thêm vào giỏ hàng thành công",
                                    showConfirmButton: false,
                                    timer: 1500
                                  });
