--- a/CarRental/Views/Shared/_Layout.cshtml
+++ b/CarRental/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
     <!-- Main Style CSS -->
     <link rel="stylesheet" href="~/assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="~/assets/css/uploadimage.css">
     
 
 </head>
@@ -445,6 +446,7 @@
 
     <!-- Main JS -->
     <script src="~/assets/js/main.js"></script>
+    <script src="~/assets/js/uploadimage.js"></script>
     @RenderSection("scripts", required: false)
    @*  @section scripts {
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
