--- a/CarRental/wwwroot/assets/css/style.css
+++ b/CarRental/wwwroot/assets/css/style.css
@@ -63,12 +63,12 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Poppins", sans-serif;
-  color: #ffffff;
-  font-weight: 500;
-  margin-top: 0px;
-  font-weight: 400;
-  line-height: 1;
+    font-family: "Poppins", sans-serif;
+    color: #000000 !important;
+    font-weight: 500;
+    margin-top: 0px;
+    font-weight: 400;
+    line-height: 1;
 }
 
 h1 a,
