--- a/CarRental/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/CarRental/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -67,6 +67,9 @@
                                     <a asp-controller="Blogs" asp-action="Index">Quản lí Blog</a>
                                 </li>
                                 <li class="submenu-item ">
+                                    <a asp-controller="Orders" asp-action="Index">Quản lí đơn đặt xe</a>
+                                </li>
+                                <li class="submenu-item ">
                                     <a href="/Admin/file-manager">Quản lí FILE</a>
                                 </li>
                                
